01-Networking/04-routes/01-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: default

spec:
  type: ClusterIP
  selector:
    app: static-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
