01-Networking/04-routes/02-app-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: default
spec:
  hostnames:
    - app.example.com
  parentRefs:
  - group: gateway.networking.k8s.io
    sectionName: webb
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  rules:
  - backendRefs:
    - kind: Service
      name: app-svc
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
